# secret-santa-script

./: .gitignore  README.md  Secret Santa.py  pyproject.toml
secret_wichtel/: __init__.py  secret_wichtel.py
src/: secret_santa.py
tests/: test_wichteln.py
