[tool.poetry]
name = "secret_wichtel"
version = "0.1.0"
license = "MIT"
description = "Secret Santa function for your christmas pleasure."
authors = ["danczw <dev.dc@pm.me>"]
repository = "https://github.com/danczw/secret_santa_script"
keywords = ["secret", "santa", "christmas", "presents"]

classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
